[package]
name = "whisperkit"
description = "Rust port of WhisperKit: on-device Whisper speech-to-text on CoreML"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["whisper", "speech-to-text", "coreml", "asr", "transcription"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
derive_more.workspace = true
libc.workspace = true
mach2.workspace = true
# `objc2` + `objc2-foundation` are CORE (non-optional): the compression-ratio
# fallback signal (`text::compression_ratio_of_*`) calls Apple's
# `NSData.compressed(using: .zlib)` on every fallback decision, so it must be
# present in every feature configuration of this macOS-only crate, not just
# under `nl-recognizer`. `nl-recognizer` still gates its own extra dep
# (`objc2-natural-language`) below.
objc2.workspace = true
objc2-foundation.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
unicode_categories.workspace = true

serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
objc2-natural-language = { workspace = true, optional = true }
# Optional Silero-VAD long-form chunking (`crate::silero_vad::SileroVad`), an
# opt-in alternative to the default energy VAD. Path dep on the sibling crate;
# silero's detection logic rides through it, still NO `ort`/ONNX — vadkit's
# runtime silero dep is `default-features = false` and vadkit's ONNX dev-dep is
# not transitive, so `cargo tree -p whisperkit --features vadkit -i ort` is
# empty. Re-pin nothing here when silero publishes; that is vadkit's Cargo.toml.
vadkit = { path = "../vadkit", optional = true }

[features]
serde = ["dep:serde"]
tracing = ["dep:tracing"]
# Silero VAD long-form chunking via the sibling `vadkit` crate (opt-in; the
# energy VAD stays the default). See `crate::silero_vad`.
vadkit = ["dep:vadkit"]
# Optional transcript-based language redetection for word splitting
# (`tokenizer::nl_recognizer::redetect_language`), via Apple's
# `NLLanguageRecognizer`. Off by default: the pipeline's one source of
# truth for language stays the decoder's own `<|lang|>` token (see
# `WhisperTokenizer::split_to_word_tokens`'s doc) -- this feature only
# exposes the redetection helper for callers who want a second opinion.
nl-recognizer = ["dep:objc2-natural-language"]

[dev-dependencies]
cpal.workspace = true
criterion.workspace = true
hound.workspace = true
rubato.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true

# `test = true` compiles this example under the normal libtest harness too
# (in addition to its ordinary `cargo build --examples`/`cargo run`
# build), so `cargo test` also runs its inline `#[cfg(test)]` hermetic
# `BoundedAudioQueue` tests. `main` is unaffected: under `--test`
# compilation the harness supplies its own entry point, so `main` is
# compiled (and therefore still type-checked) but never executed —
# `cargo test` never opens a microphone.
[[example]]
name = "mic_stream"
test = true

[[bench]]
name = "stages"
harness = false

[[bench]]
name = "rtf"
harness = false

# `rtf` itself stays `harness = false` so `cargo bench` runs its real
# end-to-end main() directly. Cargo still sets `cfg(test)` there regardless
# of `harness` (verified empirically, see the phase-5 fix report), so its
# `#[cfg(test)]` block compiles either way — but `harness = false` means no
# libtest runner is ever linked for that target, so nothing ever CALLS
# those `#[test]` fns there. A bare `test = true` on the bench stanza above
# would therefore build but could never run `models_ready`'s hermetic
# tests. This second target compiles the exact same source under the
# default (harness = true) test harness instead, purely so those tests run
# under `cargo test`; Cargo prints an informational (non-fatal, `-D
# warnings`-immune) "present in multiple build targets" note for this
# because of the shared path, which is expected and harmless.
[[test]]
name = "rtf_gate"
path = "benches/rtf.rs"

[lints]
workspace = true
